kubernetes/apps/default/overseerr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
  hostnames:
    - "request.ragas.sh"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: overseerr
          port: 5055
